Header and footer complete

--- a/_shadow_styles.css
+++ b/_shadow_styles.css
@@ -1,7 +1,7 @@
 * {margin:0; padding:0;}
 body {background: url("images/site-bg-grad.png")repeat-x bottom left #171b1e; color:#FFF; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
 #appView {width:100%;}
-#header, #mainContentArea {width:900px; margin:0 auto;}
+#header {width:900px; margin:0 auto;}
 #header {height:100px;margin-top:15px;}
 #logo {width:395px; height:100px; float:left;}
 #header-right {width:505px;height:100px;float:left;}
@@ -14,15 +14,24 @@ body {background: url("images/site-bg-grad.png")repeat-x bottom left #171b1e; co
 #header-search-frame {clear:both;width:505px; height:40px; background:#000;border-radius:5px 5px 0 0;}
 #header-search {margin:auto;width:491px; height:29px; position:relative;}
 #header-search input#searchKwdField {background:#bcbcbc; border-radius:5px 5px 5px 5px;color:#656565;width:442px;height:27px;border:1px solid #656565; position:absolute;top:5px;padding:0 10px;}
-#header-search input#searchButton {background: url("images/search-button.png") no-repeat scroll right top transparent;cursor: pointer;width:67px; height:29px;position:absolute;top:5px; left:422px;z-index:2;}
-#category-nav {width:100%; background:url("images/cat-nav-bg.png") repeat-x top left transparent;clear:both; height:51px;border-top:2px solid #000;}
+#header-search input#searchButton {background: url("images/search-button.png") no-repeat scroll right top transparent;cursor: pointer;width:67px; height:29px;position:absolute;top:5px; left:422px;border:none;}
+#category-nav {width:100%; background:url("images/cat-nav-bg.png") repeat-x top left transparent;clear:both; height:51px;border-top:2px solid #000;margin-bottom:20px;}
 #category-nav .inner {width:950px; margin:0 auto;}
 #category-nav ul {float:left;}
 #category-nav ul  li {float:left; list-style:none;}
 #category-nav a {display:block; padding:15px 10px 0;height:36px;}
 #category-nav a:hover {background:url("images/cat-nav-hover-bg.png") repeat-x top left transparent;}
-
-#footer {background:#171b1e; border-radius:0 0 5px 5px; height:190px;width:900px;margin:0 auto;}
+/*#mainContentArea a {color:#FFFFFF; font-weight:normal; text-decoration:underline;}*/
+.ui-tabs-panel li, .textContentArea li {margin:4px 15px;}
+#mainContentArea  {width:870px;padding:7px 15px;margin:0 auto;}
+#mainContentArea a:link {color:#f3fdfe;}
+#mainContentArea a:visited {color:#f7e0fd;}
+#mainContentArea a:hover {color:#2ccabb8;}
+#mainContentArea a:active {color:#2ccabb8; text-decoration:none;}
+.breadcrumb li:after {color:#FFF;}
+.tabbedProductContentTD {padding-top:20px;}
+.checkoutButtonsContainer .checkoutButton, #addToCartBtn {background: url("images/ui-bg_glass_35_2cabb8_1x400.png") repeat-x scroll 50% 50% #2CABB8;border: 1px solid #015F68;color: #FFFFFF;font-weight: normal;}
+#footer {background:#171b1e; border-radius:0 0 5px 5px; height:190px;width:900px;margin:20px auto 0;}
 #footer h3 {font-size:15px;margin-bottom:15px;}
 #footer a {font-size:11px;}
 #footer-decal {width:900px; margin:0 auto;height:67px;}
